--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 .App {
   text-align: center;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
+.TopBar {
+  grid-row: 1;
+  grid-column: 1/3;
+}
+
+.Contacts {
+  grid-row: 2 / 4;
+  grid-column: 2;
 }
 
 .App-logo {
